# Event_Registration_System

./: README.md  pyproject.toml  requirements.txt
app/: database.py  main.py
app/models/: event_model.py  feedback_model.py  participant_model.py  registration_model.py
app/routes/: event_routes.py  feedback_routes.py  participant_routes.py  registration_routes.py
app/services/: event_service.py  participant_service.py  registration_service.py
