[project]
name = "event-registration-system"
version = "0.1.0"
description = "Event Registration System API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "motor>=3.7.1",
    "pydantic>=2.13.4",
    "beanie>=2.0.0",
    "python-dotenv>=1.2.2",
]
